Refactoring the routes

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="utf-8">
     <title>DragonValley</title>
@@ -8,15 +8,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-    <section class="hero is-primary is-bold">
-        <div class="hero-body">
-            <div class="container">
-                <h1 class="title">Vale dos Dragões</h1>
-                <p class="subtitle">Uma experiência Angular</p>
-            </div>
-        </div>
-    </section>
-
     <app-root></app-root>
 </body>
 </html>
